Reorganize into simple-sr

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 *~
 .*~
 .ipynb_checkpoints
-audio/saved
-audio/simple_audio.h5
-audio/simple_audio.tflite
+audio/simple-sr/saved
+audio/simple-sr/simple-sr.h5
+audio/simple-sr/simple-sr.tflite
 audio/data/mini_speech_commands*
 audio/data/test/h_yes_spec.npy
 audio/data/test/test*.wav
